--- a/.github/workflows/cross-build.yml
+++ b/.github/workflows/cross-build.yml
@@ -87,7 +87,7 @@ jobs:
         with:
           tag: ${{ github.event.inputs.version}}
           name: ${{ github.event.inputs.version}}
-          artifacts: ./bin/*
+          artifacts: ./bin/
           allowUpdates: true
           body: |
             * JIM 简单的聊天系统
