--- a/.github/workflows/cross-build.yml
+++ b/.github/workflows/cross-build.yml
@@ -28,6 +28,9 @@ jobs:
           sudo snap refresh
           sudo snap install go --classic
           go install github.com/swaggo/swag/cmd/swag@latest
+          
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
 
       - name: 下载依赖
         run: |
