change workflows file

--- a/.github/workflows/cross-build.yml
+++ b/.github/workflows/cross-build.yml
@@ -102,8 +102,9 @@ jobs:
           $(go env GOPATH)/bin/swag init -g ./handler/router.go
           cd ../
           git clone -b main https://github.com/jerbe/jim-docs.git jim-docs
-          cp -r ${localPath}/docs/ ./jim-docs/docs/
+          cp -r ${localPath}/docs/ ./jim-docs/
           cd jim-docs
+          
           
           if git status --porcelain | grep .; then
             echo "添加更改文件"
