--- a/.github/workflows/cross-build.yml
+++ b/.github/workflows/cross-build.yml
@@ -89,7 +89,7 @@ jobs:
           bin_arrays=($(ls jim-*))
           for ((i=0; i<${#bin_arrays[@]}; i++)); do
            zip_name=$(echo ${bin_arrays[$i]}|awk -F '-' '{print $2"-"$3}'|awk -F'.' '{print $1}')
-           zip -r ${zip_name}.zip ./${bin_arrays[$i]} ./config/ ./sql/
+           zip -r ${zip_name}-${{ github.event.inputs.version}}.zip ./${bin_arrays[$i]} ./config/ ./sql/
           done          
           echo "status=success" >> $GITHUB_OUTPUT
 
@@ -124,6 +124,14 @@ jobs:
             git push "https://${{ secrets.ACCESS_TOKEN }}@github.com/jerbe/jim-docs.git" HEAD:main
             echo "推送标签(tag)"
             git push --force origin ${{ github.event.inputs.version }}  
+          
+            curl -L \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.ACCESS_TOKEN }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/jerbe/jim-docs/actions/workflows/build.yml/dispatches \
+            -d '{"ref":"main","inputs":{"version":"${{ github.event.inputs.version }}  "}}'
           else
             echo "没有东西需要提交"
             exit 0
