--- a/.github/workflows/cross-build.yml
+++ b/.github/workflows/cross-build.yml
@@ -57,13 +57,13 @@ jobs:
           fi
           
           if [ "${{github.event.inputs.auto_version}}" = "true" ] ; then
-              IFS='.' read -r version_parts <<< "${version_tag}"
+              IFS='.' read -ra version_parts <<< "${version_tag}"
               major="${version_parts[0]}"
               minor="${version_parts[1]}"
               patch="${version_parts[2]}"
               # 递增修订号
               patch=$((patch + 1))
-              new_version="${major}.${minor}.${patch}"
+              new_version="$major.$minor.$patch"
           fi
           
           echo "版本升级: ${version_tag} => ${new_version}"
