--- a/.github/workflows/cross-build.yml
+++ b/.github/workflows/cross-build.yml
@@ -73,40 +73,7 @@ jobs:
         id: compile
         working-directory: ./
         run: |
-          function build_func {
-            suffix=""
-            if [ "$1" = "windows" ] ; then
-              suffix=".exe"
-            fi
-            echo "编译OS:$1 ARCH:$2 ..."
-            echo "CGO_ENABLED=0 GOOS=$1   GOARCH=$2    go build -o ./bin/jim-$1-$2${suffix}    ./*.go"
-            CGO_ENABLED=0 GOOS=$1   GOARCH=$2    go build -o ./bin/jim-$1-$2${suffix}    ./*.go
-          }
-          
-          echo "开始编译[darwin]环境执行文件"
-          darwin_arch=("amd64" "arm64")
-          for ((i=0; i<${#darwin_arch[@]}; i++)); do
-            build_func darwin ${darwin_arch[$i]}
-          done
-          
-          echo "开始编译[freebsd]环境执行文件"
-          freebsd_arch=("386" "amd64" "arm" "arm64")
-          for ((i=0; i<${#freebsd_arch[@]}; i++)); do
-            build_func freebsd ${freebsd_arch[$i]}
-          done
-          
-          echo "开始编译[linux]环境执行文件"
-          linux_arch=("386" "amd64" "arm" "arm64" "mips" "mips64")
-          for ((i=0; i<${#linux_arch[@]}; i++)); do
-            build_func linux ${linux_arch[$i]}
-          done
-          
-          echo "开始编译[windows]环境执行文件"
-          windows_arch=("386" "amd64" "arm" "arm64")
-          for ((i=0; i<${#windows_arch[@]}; i++)); do
-            build_func windows ${windows_arch[$i]}
-          done
-          
+          make build
           echo "status=success" >> $GITHUB_OUTPUT
 
       - name: 整理文件
